# SSDD-23

./: README.md
icedrive-templates/icedrive-templates/: pyproject.toml
icedrive-templates/icedrive-templates/config/: directory.config
icedrive-templates/icedrive-templates/icedrive_directory/: client.py  directory.py
icedrive_directory/: directory.py
