[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icedrive-directory"
version = "0.0.1"
authors = [
  { name="Daniel Machuca Archidona", email="Daniel.Machuca@alu.uclm.es" },
]
description = "Implementation of IceDrive Directory service"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
dependencies = [
    "zeroc-ice>=3.7",
]

[project.optional-dependencies]
tests = ["pytest"]
linters = ["black", "ruff", "pydocstyle"]

[project.urls]
"Homepage" = "https://github.com/Daniel-Machuca/SSDD-23"

[project.scripts]
icedrive-directory = "icedrive_directory.app:main"
